News UAT/force-app/main/default/objects/Opportunity__x/Opportunity__x.object-meta.xml
<CustomObject>
    <externalDataSource>ARMuat</externalDataSource>
    <externalName>Opportunity</externalName>
    <label>NRM Opportunity</label>
    <pluralLabel>NRM Opportunities</pluralLabel>
</CustomObject>