News UAT/force-app/main/default/objects/Opportunity__x/fields/Account_Plan_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_c__c</fullName>
    <externalDeveloperName>Account_Plan__c</externalDeveloperName>
    <label>Account Plan</label>
    <length>18</length>
    <type>Text</type>
</CustomField>