News UAT/force-app/main/default/objects/Opportunity__x/fields/Active_Campaign_c__c.field-meta.xml
<CustomField>
    <fullName>Active_Campaign_c__c</fullName>
    <externalDeveloperName>Active_Campaign__c</externalDeveloperName>
    <label>Active Campaign</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>