News UAT/force-app/main/default/objects/Opportunity__x/fields/Add_Sales_Visit_c__c.field-meta.xml
<CustomField>
    <fullName>Add_Sales_Visit_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Add_Sales_Visit__c</externalDeveloperName>
    <label>Add Sales Visit</label>
    <type>Checkbox</type>
</CustomField>