News UAT/force-app/main/default/objects/Opportunity__x/fields/APN_Event_Dt_c__c.field-meta.xml
<CustomField>
    <fullName>APN_Event_Dt_c__c</fullName>
    <externalDeveloperName>APN_Event_Dt__c</externalDeveloperName>
    <label>XXXAPN Event DateXXX</label>
    <type>DateTime</type>
</CustomField>