News UAT/force-app/main/default/objects/Opportunity__x/fields/Area_c__c.field-meta.xml
<CustomField>
    <fullName>Area_c__c</fullName>
    <externalDeveloperName>Area__c</externalDeveloperName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sunshine Coast</fullName>
            </value>
            <value>
                <fullName>Toowoomba Area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>