News UAT/force-app/main/default/objects/Opportunity__x/fields/Branch_c__c.field-meta.xml
<CustomField>
    <fullName>Branch_c__c</fullName>
    <externalDeveloperName>Branch__c</externalDeveloperName>
    <label>Branch</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>