News UAT/force-app/main/default/objects/Opportunity__x/fields/Brand_c__c.field-meta.xml
<CustomField>
    <fullName>Brand_c__c</fullName>
    <externalDeveloperName>Brand__c</externalDeveloperName>
    <label>Brand</label>
    <length>200</length>
    <type>Text</type>
</CustomField>