News UAT/force-app/main/default/objects/Opportunity__x/fields/Campaign_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name_c__c</fullName>
    <externalDeveloperName>Campaign_Name__c</externalDeveloperName>
    <label>Campaign Name</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>