News UAT/force-app/main/default/objects/Opportunity__x/fields/Cancellation_Reason_c__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason_c__c</fullName>
    <externalDeveloperName>Cancellation_Reason__c</externalDeveloperName>
    <label>Cancellation Reason</label>
    <length>200</length>
    <type>Text</type>
</CustomField>