News UAT/force-app/main/default/objects/Opportunity__x/fields/Category_NZ_c__c.field-meta.xml
<CustomField>
    <fullName>Category_NZ_c__c</fullName>
    <externalDeveloperName>Category_NZ__c</externalDeveloperName>
    <label>Category NZ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business As Usual</fullName>
            </value>
            <value>
                <fullName>New business</fullName>
            </value>
            <value>
                <fullName>Up-sell</fullName>
            </value>
            <value>
                <fullName>Contract Renegotiation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>