News UAT/force-app/main/default/objects/Opportunity__x/fields/Closed_By_c__c.field-meta.xml
<CustomField>
    <fullName>Closed_By_c__c</fullName>
    <externalDeveloperName>Closed_By__c</externalDeveloperName>
    <label>Closed By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>