News UAT/force-app/main/default/objects/Opportunity__x/fields/Closed_Lost_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Date_c__c</fullName>
    <externalDeveloperName>Closed_Lost_Date__c</externalDeveloperName>
    <label>Closed Lost Date</label>
    <type>Date</type>
</CustomField>