News UAT/force-app/main/default/objects/Opportunity__x/fields/Closed_Won_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Date_c__c</fullName>
    <externalDeveloperName>Closed_Won_Date__c</externalDeveloperName>
    <label>Closed Won Date</label>
    <type>Date</type>
</CustomField>