News UAT/force-app/main/default/objects/Opportunity__x/fields/Closed_Won_Reason_c__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Reason_c__c</fullName>
    <externalDeveloperName>Closed_Won_Reason__c</externalDeveloperName>
    <label>Closed Won Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DMS New</fullName>
            </value>
            <value>
                <fullName>DMS Resign</fullName>
            </value>
            <value>
                <fullName>DMS Upsell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>