News UAT/force-app/main/default/objects/Opportunity__x/fields/Company_Email_c__c.field-meta.xml
<CustomField>
    <fullName>Company_Email_c__c</fullName>
    <externalDeveloperName>Company_Email__c</externalDeveloperName>
    <label>Company Email</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>