News UAT/force-app/main/default/objects/Opportunity__x/fields/Company_Ph_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Company_Ph_Number_c__c</fullName>
    <externalDeveloperName>Company_Ph_Number__c</externalDeveloperName>
    <label>Company Phone Number</label>
    <type>Phone</type>
</CustomField>