News UAT/force-app/main/default/objects/Opportunity__x/fields/Company_Phone_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Company_Phone_Number_c__c</fullName>
    <externalDeveloperName>Company_Phone_Number__c</externalDeveloperName>
    <label>Company Ph Number</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>