News UAT/force-app/main/default/objects/Opportunity__x/fields/Competitive_Media_Source_c__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Media_Source_c__c</fullName>
    <externalDeveloperName>Competitive_Media_Source__c</externalDeveloperName>
    <label>Competitive Media Source</label>
    <type>TextArea</type>
</CustomField>