News UAT/force-app/main/default/objects/Opportunity__x/fields/Contact_c__c.field-meta.xml
<CustomField>
    <fullName>Contact_c__c</fullName>
    <externalDeveloperName>Contact__c</externalDeveloperName>
    <label>Contact</label>
    <length>18</length>
    <type>Text</type>
</CustomField>