News UAT/force-app/main/default/objects/Opportunity__x/fields/ContractEndDate_c__c.field-meta.xml
<CustomField>
    <fullName>ContractEndDate_c__c</fullName>
    <externalDeveloperName>ContractEndDate__c</externalDeveloperName>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>