News UAT/force-app/main/default/objects/Opportunity__x/fields/ContractRenewalDate_c__c.field-meta.xml
<CustomField>
    <fullName>ContractRenewalDate_c__c</fullName>
    <externalDeveloperName>ContractRenewalDate__c</externalDeveloperName>
    <label>Contract Renewal Date</label>
    <type>Date</type>
</CustomField>