News UAT/force-app/main/default/objects/Opportunity__x/fields/ContractStartDate_c__c.field-meta.xml
<CustomField>
    <fullName>ContractStartDate_c__c</fullName>
    <externalDeveloperName>ContractStartDate__c</externalDeveloperName>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>