News UAT/force-app/main/default/objects/Opportunity__x/fields/Coupon_Code_c__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Code_c__c</fullName>
    <externalDeveloperName>Coupon_Code__c</externalDeveloperName>
    <label>Coupon Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>