News UAT/force-app/main/default/objects/Opportunity__x/fields/Customer_Address2_c__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address2_c__c</fullName>
    <externalDeveloperName>Customer_Address2__c</externalDeveloperName>
    <label>Customer Address2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>