News UAT/force-app/main/default/objects/Opportunity__x/fields/Customer_Address_c__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address_c__c</fullName>
    <externalDeveloperName>Customer_Address__c</externalDeveloperName>
    <label>Customer Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>