News UAT/force-app/main/default/objects/Opportunity__x/fields/Customer_City_c__c.field-meta.xml
<CustomField>
    <fullName>Customer_City_c__c</fullName>
    <externalDeveloperName>Customer_City__c</externalDeveloperName>
    <label>Customer City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>