News UAT/force-app/main/default/objects/Opportunity__x/fields/Customer_Country_c__c.field-meta.xml
<CustomField>
    <fullName>Customer_Country_c__c</fullName>
    <externalDeveloperName>Customer_Country__c</externalDeveloperName>
    <label>Customer Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>