News UAT/force-app/main/default/objects/Opportunity__x/fields/Customer_First_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Customer_First_Name_c__c</fullName>
    <externalDeveloperName>Customer_First_Name__c</externalDeveloperName>
    <label>Customer First Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>