News UAT/force-app/main/default/objects/Opportunity__x/fields/Customer_Last_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Customer_Last_Name_c__c</fullName>
    <externalDeveloperName>Customer_Last_Name__c</externalDeveloperName>
    <label>Customer Last Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>