News UAT/force-app/main/default/objects/Opportunity__x/fields/Customer_Organization_c__c.field-meta.xml
<CustomField>
    <fullName>Customer_Organization_c__c</fullName>
    <externalDeveloperName>Customer_Organization__c</externalDeveloperName>
    <label>Customer Organization</label>
    <length>100</length>
    <type>Text</type>
</CustomField>