News UAT/force-app/main/default/objects/Opportunity__x/fields/Customer_State_c__c.field-meta.xml
<CustomField>
    <fullName>Customer_State_c__c</fullName>
    <externalDeveloperName>Customer_State__c</externalDeveloperName>
    <label>Customer State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>