News UAT/force-app/main/default/objects/Opportunity__x/fields/Customer_Volume_Total_Change_c__c.field-meta.xml
<CustomField>
    <fullName>Customer_Volume_Total_Change_c__c</fullName>
    <externalDeveloperName>Customer_Volume_Total_Change__c</externalDeveloperName>
    <label>Customer Volume Total % Change</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>+60%</fullName>
            </value>
            <value>
                <fullName>+58%</fullName>
            </value>
            <value>
                <fullName>+56%</fullName>
            </value>
            <value>
                <fullName>+54%</fullName>
            </value>
            <value>
                <fullName>+52%</fullName>
            </value>
            <value>
                <fullName>+50%</fullName>
            </value>
            <value>
                <fullName>+48%</fullName>
            </value>
            <value>
                <fullName>+46%</fullName>
            </value>
            <value>
                <fullName>+44%</fullName>
            </value>
            <value>
                <fullName>+42%</fullName>
            </value>
            <value>
                <fullName>+40%</fullName>
            </value>
            <value>
                <fullName>+38%</fullName>
            </value>
            <value>
                <fullName>+36%</fullName>
            </value>
            <value>
                <fullName>+34%</fullName>
            </value>
            <value>
                <fullName>+32%</fullName>
            </value>
            <value>
                <fullName>+30%</fullName>
            </value>
            <value>
                <fullName>+28%</fullName>
            </value>
            <value>
                <fullName>+26%</fullName>
            </value>
            <value>
                <fullName>+24%</fullName>
            </value>
            <value>
                <fullName>+22%</fullName>
            </value>
            <value>
                <fullName>+20%</fullName>
            </value>
            <value>
                <fullName>+18%</fullName>
            </value>
            <value>
                <fullName>+16%</fullName>
            </value>
            <value>
                <fullName>+14%</fullName>
            </value>
            <value>
                <fullName>+12%</fullName>
            </value>
            <value>
                <fullName>+10%</fullName>
            </value>
            <value>
                <fullName>+8%</fullName>
            </value>
            <value>
                <fullName>+6%</fullName>
            </value>
            <value>
                <fullName>+4%</fullName>
            </value>
            <value>
                <fullName>+2%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>