News UAT/force-app/main/default/objects/Opportunity__x/fields/Customer_Zip_c__c.field-meta.xml
<CustomField>
    <fullName>Customer_Zip_c__c</fullName>
    <externalDeveloperName>Customer_Zip__c</externalDeveloperName>
    <label>Customer Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>