News UAT/force-app/main/default/objects/Opportunity__x/fields/Days_to_Close_c__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Close_c__c</fullName>
    <externalDeveloperName>Days_to_Close__c</externalDeveloperName>
    <label>Days to Close</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Number</type>
</CustomField>