News UAT/force-app/main/default/objects/Opportunity__x/fields/Days_to_close_NZ_c__c.field-meta.xml
<CustomField>
    <fullName>Days_to_close_NZ_c__c</fullName>
    <externalDeveloperName>Days_to_close_NZ__c</externalDeveloperName>
    <label>Days to close NZ</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>