News UAT/force-app/main/default/objects/Opportunity__x/fields/DB_Competitor_c__c.field-meta.xml
<CustomField>
    <fullName>DB_Competitor_c__c</fullName>
    <externalDeveloperName>DB_Competitor__c</externalDeveloperName>
    <label>DB Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Competitor A</fullName>
            </value>
            <value>
                <fullName>Competitor B</fullName>
            </value>
            <value>
                <fullName>Competitor C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>