News UAT/force-app/main/default/objects/Opportunity__x/fields/DealType_c__c.field-meta.xml
<CustomField>
    <fullName>DealType_c__c</fullName>
    <externalDeveloperName>DealType__c</externalDeveloperName>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>SOYB</fullName>
            </value>
            <value>
                <fullName>New Contract</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>