News UAT/force-app/main/default/objects/Opportunity__x/fields/Demographic_c__c.field-meta.xml
<CustomField>
    <fullName>Demographic_c__c</fullName>
    <externalDeveloperName>Demographic__c</externalDeveloperName>
    <label>Target Market Group(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Traditional Family</fullName>
            </value>
            <value>
                <fullName>Visible Achievement</fullName>
            </value>
            <value>
                <fullName>Conventional Family Life</fullName>
            </value>
            <value>
                <fullName>Look at Me</fullName>
            </value>
            <value>
                <fullName>Real Conservatives</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>