News UAT/force-app/main/default/objects/Opportunity__x/fields/DMS_Case_Created_c__c.field-meta.xml
<CustomField>
    <fullName>DMS_Case_Created_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>DMS_Case_Created__c</externalDeveloperName>
    <label>DMS Case Created</label>
    <type>Checkbox</type>
</CustomField>