News UAT/force-app/main/default/objects/Opportunity__x/fields/DMS_Deal_Won_c__c.field-meta.xml
<CustomField>
    <fullName>DMS_Deal_Won_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>DMS_Deal_Won__c</externalDeveloperName>
    <label>DMS Deal Won</label>
    <type>Checkbox</type>
</CustomField>