News UAT/force-app/main/default/objects/Opportunity__x/fields/E_mail_Primary_Account_Manager_c__c.field-meta.xml
<CustomField>
    <fullName>E_mail_Primary_Account_Manager_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>E_mail_Primary_Account_Manager__c</externalDeveloperName>
    <label>E-mail Primary Account Manager</label>
    <type>Checkbox</type>
</CustomField>