News UAT/force-app/main/default/objects/Opportunity__x/fields/End_Date_c__c.field-meta.xml
<CustomField>
    <fullName>End_Date_c__c</fullName>
    <externalDeveloperName>End_Date__c</externalDeveloperName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>