News UAT/force-app/main/default/objects/Opportunity__x/fields/End_Month_c__c.field-meta.xml
<CustomField>
    <fullName>End_Month_c__c</fullName>
    <externalDeveloperName>End_Month__c</externalDeveloperName>
    <label>End Month</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>