News UAT/force-app/main/default/objects/Opportunity__x/fields/Event_Date_and_Time_c__c.field-meta.xml
<CustomField>
    <fullName>Event_Date_and_Time_c__c</fullName>
    <externalDeveloperName>Event_Date_and_Time__c</externalDeveloperName>
    <label>Event Date and Time</label>
    <type>DateTime</type>
</CustomField>