News UAT/force-app/main/default/objects/Opportunity__x/fields/Event_Description_c__c.field-meta.xml
<CustomField>
    <fullName>Event_Description_c__c</fullName>
    <externalDeveloperName>Event_Description__c</externalDeveloperName>
    <label>Event Description</label>
    <type>TextArea</type>
</CustomField>