News UAT/force-app/main/default/objects/Opportunity__x/fields/Expectations_c__c.field-meta.xml
<CustomField>
    <fullName>Expectations_c__c</fullName>
    <externalDeveloperName>Expectations__c</externalDeveloperName>
    <label>Client Expectations</label>
    <type>TextArea</type>
</CustomField>