News UAT/force-app/main/default/objects/Opportunity__x/fields/Feature_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Feature_Name_c__c</fullName>
    <externalDeveloperName>Feature_Name__c</externalDeveloperName>
    <label>Feature Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>