News UAT/force-app/main/default/objects/Opportunity__x/fields/Gift_c__c.field-meta.xml
<CustomField>
    <fullName>Gift_c__c</fullName>
    <externalDeveloperName>Gift__c</externalDeveloperName>
    <label>Gift</label>
    <length>50</length>
    <type>Text</type>
</CustomField>