News UAT/force-app/main/default/objects/Opportunity__x/fields/Grade_c__c.field-meta.xml
<CustomField>
    <fullName>Grade_c__c</fullName>
    <externalDeveloperName>Grade__c</externalDeveloperName>
    <label>Grade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>