News UAT/force-app/main/default/objects/Opportunity__x/fields/Hand_Over_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Hand_Over_Date_c__c</fullName>
    <externalDeveloperName>Hand_Over_Date__c</externalDeveloperName>
    <label>Hand Over Date</label>
    <type>Date</type>
</CustomField>