News UAT/force-app/main/default/objects/Opportunity__x/fields/HasOpenActivity__c.field-meta.xml
<CustomField>
    <fullName>HasOpenActivity__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>HasOpenActivity</externalDeveloperName>
    <label>Has Open Activity</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>