News UAT/force-app/main/default/objects/Opportunity__x/fields/HasOpportunityLineItem__c.field-meta.xml
<CustomField>
    <fullName>HasOpportunityLineItem__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>HasOpportunityLineItem</externalDeveloperName>
    <label>Has Line Item</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>