News UAT/force-app/main/default/objects/Opportunity__x/fields/HasOverdueTask__c.field-meta.xml
<CustomField>
    <fullName>HasOverdueTask__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>HasOverdueTask</externalDeveloperName>
    <label>Has Overdue Task</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>