News UAT/force-app/main/default/objects/Opportunity__x/fields/Initiative_c__c.field-meta.xml
<CustomField>
    <fullName>Initiative_c__c</fullName>
    <externalDeveloperName>Initiative__c</externalDeveloperName>
    <label>Initiative</label>
    <length>30</length>
    <type>Text</type>
</CustomField>