News UAT/force-app/main/default/objects/Opportunity__x/fields/InsertionOrderNo_del_c__c.field-meta.xml
<CustomField>
    <fullName>InsertionOrderNo_del_c__c</fullName>
    <externalDeveloperName>InsertionOrderNo_del__c</externalDeveloperName>
    <label>Insertion Order No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>