News UAT/force-app/main/default/objects/Opportunity__x/fields/IsStrategic_c__c.field-meta.xml
<CustomField>
    <fullName>IsStrategic_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>IsStrategic__c</externalDeveloperName>
    <label>IsStrategic</label>
    <type>Checkbox</type>
</CustomField>