News UAT/force-app/main/default/objects/Opportunity__x/fields/KPI_Target_Relationship_c__c.field-meta.xml
<CustomField>
    <fullName>KPI_Target_Relationship_c__c</fullName>
    <externalDeveloperName>KPI_Target_Relationship__c</externalDeveloperName>
    <label>KPI Target Relationship</label>
    <length>18</length>
    <type>Text</type>
</CustomField>